--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
 
     <main>
-      <img src= "elephant_butt.jpg" width= "300" class= "image-circle" align= "right"> 
+      <img src= "portfolio/elephant_butt.jpg" width= "300" class= "image-circle" align= "right"> 
       <h2>I am Bridgette Turner</h2>         
       <h4>An adventerous student of computer engineering.</h4>
       <p class= "location">Resident of the world living in Denver, Colorado.</p>       
