--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       <p class= "location">Resident of the world living in Denver, Colorado.</p>       
       <div class= "bio">
       <h4>BIO</h4>      
-      <p>After years in the hospitality industry and searching for my muse, I found the fascinating world of coding. I began my journey initially teaching myself and later joining Thinkful.
+      <p>After years in the hospitality industry, working with others and accommodating the public, and searching for my muse, I found the fascinating world of coding. I began my journey initially teaching myself and later joining Thinkful.
       <br><br>
-      Experiencing the world is my deepest enjoyment. I love meeting new people and learning from them. From a young age I had an adventerous spirit, dreaming of becoming a wildlife biologist, I graduated from Cleveland State University with a Bachlor's of Science in Biology.
+      Experiencing the world is my deepest enjoyment. I love meeting new people and learning from them. From a young age I had an adventerous spirit, dreaming of becoming a wildlife biologist, I graduated from Cleveland State University with a Bachelor's of Science in Biology.
       <br><br>
       Along with what drives me, I enjoy the following hobbies:</p>
       <ol><li>Video games</li>
