--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
 
     <main>
-      <img src= "portfolio/elephant_butt.jpg" width= "300" class= "image-circle" align= "right" alt= "Me with an elephant"> 
+      <img src= "portfolio/elephant_butt.jpg" width= "300" class= "image-circle" alt= "Me with an elephant"> 
       <h2>I am Bridgette Turner</h2>         
       <h4>An adventerous student of computer engineering.</h4>
       <p class= "location">Resident of the world living in Denver, Colorado.</p>       
@@ -33,8 +33,8 @@
       <br><br>
       Along with what drives me, I enjoy the following hobbies:</p>
       <ol><li>Video games</li>
-        <ul><li>PS4</li>
-        <li>Nintendo</li></ul>
+      <ul><li>PS4</li>
+      <li>Nintendo</li></ul>
         <li>Reading</li>
         <li>Gardening</li>
         <li>Yoga</li></ol>
