--- a/index.html
+++ b/index.html
@@ -32,12 +32,16 @@
       Experiencing the world is my deepest enjoyment. I love meeting new people and learning from them. From a young age I had an adventerous spirit, dreaming of becoming a wildlife biologist, I graduated from Cleveland State University with a Bachelor's of Science in Biology.
       <br><br>
       Along with what drives me, I enjoy the following hobbies:</p>
-      <ol><li>Video games</li>
-      <ul><li>PS4</li>
-      <li>Nintendo</li></ul>
-        <li>Reading</li>
+      <ol>
+        <li>
+          <p>Video games</p>
+        <ul>
+          <li>PS4</li>
+          <li>Nintendo</li>
+        </ul>
+        <li><p>Reading</li>
         <li>Gardening</li>
-        <li>Yoga</li></ol>
+        <li>Yoga</p></li></ol>
     <hr>
     </div></main>
 
