--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
       <img src= "portfolio/elephant_butt.jpg" width= "300" class= "image-circle" alt= "Me with an elephant"> 
       <h2>I am Bridgette Turner</h2>         
-      <h3>An adventerous student of computer engineering.</h3>
+      <h3 class= "intro">An adventerous student of computer engineering.</h3>
       <p class= "location">Resident of the world living in Denver, Colorado.</p>       
       <div class= "bio">
       <h4>BIO</h4>      
