--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
           <li>PS4</li>
           <li>Nintendo</li>
         </ul>
-        <li><p>Reading</li>
+        <li>Reading</li>
         <li>Gardening</li>
-        <li>Yoga</p></li></ol>
+        <li>Yoga</li></ol>
     <hr>
     </div></main>
 
