--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <h2>I am Bridgette Turner</h2>         
       <h3 class= "intro">An adventerous student of computer engineering.</h3>
       <p class= "location">Resident of the world living in Denver, Colorado.</p>       
-      <div class= "bio">
-      <h4>BIO</h4>      
+      <h4 class= "intro">BIO</h4>
+            <div class= "bio">
       <p>After years in the hospitality industry, working with others and accommodating the public, and searching for my muse, I found the fascinating world of coding. I began my journey initially teaching myself and later joining Thinkful.
       <br><br>
       Experiencing the world is my deepest enjoyment. I love meeting new people and learning from them. From a young age I had an adventerous spirit, dreaming of becoming a wildlife biologist, I graduated from Cleveland State University with a Bachelor's of Science in Biology.
