--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <main>
       <img src= "portfolio/elephant_butt.jpg" width= "300" class= "image-circle" alt= "Me with an elephant"> 
       <h2>I am Bridgette Turner</h2>         
-      <h3>An adventerous student of computer engineering.</h3>
+      <h3>An adventurous student of computer engineering.</h3>
       <p class= "location">Resident of the world living in Denver, Colorado.</p>       
      <div class= "bio">
        <h4>BIO</h4>            
       <p>After years in the hospitality industry, working with others and accommodating the public, and searching for my muse, I found the fascinating world of coding. I began my journey initially teaching myself and later joining Thinkful.
       <br><br>
-      Experiencing the world is my deepest enjoyment. I love meeting new people and learning from them. From a young age I had an adventerous spirit, dreaming of becoming a wildlife biologist, I graduated from Cleveland State University with a Bachelor's of Science in Biology.
+      Experiencing the world is my deepest enjoyment. I love meeting new people and learning from them. From a young age I had an adventurous spirit, dreaming of becoming a wildlife biologist, I graduated from Cleveland State University with a Bachelor's of Science in Biology.
       <br><br>
       Along with what drives me, I enjoy the following hobbies:</p>
       <ol>
